# stream-vigil

./: .gitignore  .mypy.ini  .ruff.toml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check-pull-request.yml
examples/: arcus.py  basic_auto_encoder.py  logging.yml  main.py  rapp.py  rsrae.py
examples/arcus/: basic.py  rapp.py
notebooks/: arcus.ipynb  basic.ipynb  basic_auto_encoder.ipynb  lightgbm.ipynb  logistic.ipynb  rapp.ipynb  rsrae.ipynb
notebooks/arcus/: basic.ipynb  rapp.ipynb
notebooks/supervised/: lightgbm.ipynb  logistic.ipynb  randomforest.ipynb  svm.ipynb
notebooks/unsupervised/: isolation_forest.ipynb  ocsvm.ipynb
scripts/: auto_encoder.py  dual_network.py  labeled_auto_encoder.py  lstm_auto_encoder.py  main.py  mnist_auto_encoder.py  npz2csv.py  performance_base.py  transform_mnist.py
scripts/experiments/: arcus.py  gradual_drift.py  proposed_method.py
scripts/experiments/abrupt/arcus/: main.py
scripts/experiments/abrupt/proposed_method/: fmnist.py  kmnist.py  main.py  mnist.py
scripts/experiments/concept_drift/: proposed_method.py
scripts/experiments/concept_drift/abrupt/arcus/: fmnist.py  kmnist.py  main.py  mnist.py
scripts/experiments/concept_drift/abrupt/fashion_mnist/: arcus.py  proposed_method.py
scripts/experiments/concept_drift/abrupt/kuzushiji_mnist/: arcus.py  proposed_method.py
scripts/experiments/concept_drift/abrupt/mnist/: arcus.py  proposed_method.py
scripts/experiments/concept_drift/abrupt/proposed_method/: main.py
scripts/experiments/concept_drift/fashion_mnist/: proposed_method.py
scripts/experiments/gradual/arcus/: fmnist.py  kmnist.py  main.py
scripts/experiments/gradual/proposed_method/: kmnist.py  main.py
scripts/experiments/no_drift/: proposed_method.py
scripts/experiments/no_drift/arcus/: fmnist.py  kmnist.py  main.py
scripts/experiments/no_drift/fashion_mnist/: arcus.py  proposed_method.py
scripts/experiments/no_drift/mnist/: arcus.py  auto_encoder.py  proposed_method.py
scripts/experiments/no_drift/proposed_method/: main.py
scripts/experiments/recurring/arcus/: main.py
scripts/experiments/recurring/fashion_mnist/: proposed_method.py
scripts/experiments/recurring/proposed_method/: fmnist.py  main.py
streamvigil/: __init__.py  _arcus.py  _arcus_model.py  _arcus_model_pool.py  _dataset.py  _ensemble_vote.py  _kde.py  _performance_base.py  arcus.py  main.py  utils.py
streamvigil/core/: __init__.py  _anomaly_detector.py  _arcus_model_pool.py  _auto_encoder.py  _model.py  _model_pool.py  _pool.py  _similarity.py  _window.py  auto_encoder.py  model.py  pool.py  similarity.py  utils.py
streamvigil/detectors/: __init__.py  _basic.py  _lstm.py  _rapp.py  _rsrae.py
streamvigil/utils/: __init__.py  _filter.py  _plot.py
tests/: test_arcus.py
tests/core/: test_auto_encoder.py  test_model.py  test_pool.py  test_similarity.py  test_utils.py
tests/detectors/: test_basic.py  test_rsrae.py
tests/mock/: __init__.py  auto_encoder.py
(+38 files in other folders)
