[project]
name = "streamvigil"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koki-algebra", email = "biz.kokiyamada1022@gmail.com" }
]
dependencies = [
    "torch>=2.2.1",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.2",
    "pandas-stubs>=2.2.1.240316",
    "pyyaml>=6.0.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.1.post1",
]

[tool.rye.scripts]
fmt = { chain = ["ruff format ./streamvigil ./tests ./examples"]}
lint = { chain = [
    "ruff check --fix ./streamvigil ./tests ./examples",
    "mypy ./streamvigil ./tests"
]}
test = { chain = ["pytest ./tests"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["streamvigil"]
